# otus_2_1_allocator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
libs/: CMakeLists.txt
libs/customContainer/: customContainer.h
libs/limitedAllocator/: limitedAllocator.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/googletest/: README.md
test/test_customContainer/: CMakeLists.txt  test_customContainer.cpp  test_customContainer.h
test/test_limitedAllocator/: CMakeLists.txt  test_limitedAllocator.cpp  test_limitedAllocator.h
